# maki-engine

./: .gitignore  CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  D3D.vcxproj  D3D.vcxproj.filters  D3DRenderCore.vcxproj  D3DRenderCore.vcxproj.filters  Framework.vcxproj  Framework.vcxproj.filters  LuaLayer.vcxproj  LuaLayer.vcxproj.filters  OGL.vcxproj  OGL.vcxproj.filters  OGLRenderCore.vcxproj  OGLRenderCore.vcxproj.filters  OldFramework.vcxproj  README.md  pavement.py
src/: CMakeLists.txt  Maki.h  MakiFramework.h  MakiLuaLayer.h
src/core/: MakiAllocator.h  MakiArchive.cpp  MakiArchive.h  MakiArray.h  MakiAssetLibrary.cpp  MakiAssetLibrary.h  MakiAssetManifest.cpp  MakiAssetManifest.h  MakiBase64.h  MakiBoundingBox.cpp  MakiBoundingBox.h  MakiBoundingSphere.h  MakiConfig.cpp  MakiConfig.h  MakiConsole.cpp  MakiConsole.h  MakiCoreManagers.cpp  MakiCoreManagers.h  MakiDocument.cpp  MakiDocument.h  MakiDrawCommand.cpp  MakiDrawCommand.h  MakiDrawCommandList.h  MakiEngine.cpp  MakiEngine.h  MakiFont.cpp  MakiFont.h  MakiFontManager.cpp  MakiFontManager.h  MakiFrustum.h  MakiHandleOrRid.h  MakiInputState.cpp  MakiInputState.h  MakiMacros.h  MakiManager.h  MakiMaterial.cpp  MakiMaterial.h  MakiMaterialManager.cpp  MakiMaterialManager.h  MakiMatrix44.cpp  (+68 more)
src/d3d/: DDSTextureLoader.cpp  DDSTextureLoader.h  MakiD3DCommon.cpp  MakiD3DCommon.h  MakiD3DGPUTypes.cpp  MakiD3DGPUTypes.h  MakiD3DRenderCore.cpp  MakiD3DRenderCore.h  d3d_stdafx.cpp  d3d_stdafx.h
src/d3drendercore/: MakiD3DCommon.cpp  MakiD3DCommon.h  MakiD3DGPUTypes.cpp  MakiD3DGPUTypes.h  MakiD3DRenderCore.cpp  MakiD3DRenderCore.h  d3drendercore_stdafx.cpp
src/framework/: MakiAnimationBlender.cpp  MakiAnimationBlender.h  MakiBillboardEntity.cpp  MakiBillboardEntity.h  MakiCamera.cpp  MakiCamera.h  MakiCascadeHelper.h  MakiCharacterEntity.cpp  MakiCharacterEntity.h  MakiComponent.cpp  MakiComponent.h  MakiComponentPool.h  (+60 more)
(+244 files in other folders)
